--- a/static/index.css
+++ b/static/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Signika:wght@400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Signika:wght@400&display=swap");
 
 *,
 *::before,
@@ -6,17 +6,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Signika', sans-serif;
+  font-family: "Signika", sans-serif;
 }
 
 :root {
-  --output-width: 350px;
-  --output-height: 350px;
+  --output-width: 130px;
+  --output-height: 130px;
   --canvas-width: 112px;
   --canvas-height: 112px;
   --container-width: 100%;
   --container-height: 100%;
-  --heading-font-size: max(2em, calc(.03 * var(--container-width)));
+  --heading-font-size: max(2em, calc(0.03 * var(--container-width)));
 }
 
 body {
@@ -27,14 +27,16 @@ body {
 
 .heading {
   text-align: center;
-  background: #FCF6F5FF;
+  background: #fcf6f5ff;
   padding: 20px;
-  font-size: var(--heading-font-size);
+  /* font-size: var(--heading-font-size); */
+  font-size: 1.5rem;
   width: 100vw;
   text-transform: uppercase;
   letter-spacing: 2px;
   word-spacing: 7px;
   color: black;
+  font-weight:bold;
 }
 
 .container {
@@ -43,7 +45,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 .input {
@@ -56,16 +58,17 @@ body {
 
 .input-title {
   text-transform: uppercase;
-  font-size: max(1.5em, calc(.02 * var(--container-width)));
+  /* font-size: max(1.5em, calc(0.02 * var(--container-width))); */
+  font-size: 20px;
   color: black;
-  z-index: 1
+  z-index: 1;
 }
 
 .canvas {
   width: var(--canvas-width);
   height: var(--canvas-height);
   border-radius: 0px;
-  background: #FCF6F5FF;
+  background: #fcf6f5ff;
   margin: 20px;
   /* min-width: 350px;
   min-height: 350px;
@@ -83,7 +86,7 @@ body {
 .colorPicker {
   width: 150px;
   height: 30px;
-  border: 2px solid #FCF6F5FF;
+  border: 2px solid #fcf6f5ff;
   border-radius: 25px;
   padding: 7px;
   outline: none;
@@ -96,29 +99,29 @@ body {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  margin: 20px 0;
+  /* margin: 20px 0; */
+  margin: 30px 30px 0 30px;
   justify-content: center;
   align-items: center;
 }
 
-.buttons>* {
-  width: 13rem;
-  height: 3.5rem;
+.buttons > * {
+  width: 7rem;
+  height: 2rem;
   border-radius: 50px;
   border: 2px solid white;
-  color: #FCF6F5FF;
+  color: #fcf6f5ff;
   outline: none;
   background: transparent;
-  font-size: 1.2rem;
+  font-size: 0.6rem;
   text-transform: uppercase;
   cursor: pointer;
-  transition: .2s ease;
-  margin: 0 10px;
+  transition: 0.2s ease;
   z-index: 1;
 }
 
-.buttons>*:hover {
-  background: #FCF6F5FF;
+.buttons > *:hover {
+  background: #fcf6f5ff;
   color: black;
   transform: scale(1.1);
 }
@@ -134,36 +137,36 @@ body {
 .output-box {
   width: var(--output-width);
   height: var(--output-height);
-  border-radius: 57px;
-  background: #FCF6F5FF;
+  border-radius: 30px;
+  background: #fcf6f5ff;
   display: grid;
   place-items: center;
   margin: 20px;
-  font-size: 18em;
+  font-size: 100px;
   user-select: none;
   overflow: hidden;
 }
 
 .output-title {
   text-transform: uppercase;
-  font-size: max(1.5em, calc(.02 * var(--container-width)));
+  /* font-size: max(1.5em, calc(0.02 * var(--container-width))); */
+  font-size: 20px;
   text-align: center;
   color: black;
 }
 
 @media screen and (max-width: 1000px) {
-  .container {
+  /* .container {
     flex-direction: column;
-  }
+  } */
 
   .canvas {
-    width: calc(0.8 * 87vw);
-    height: calc(0.8 * 87vw);
+    width: 112px;
+    height: 112px;
   }
 
   .buttons {
-    flex-direction: row;
+    /* flex-direction: row; */
     flex-wrap: wrap;
-    margin: 40px 0;
   }
 }
