--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-  <h1 class="heading">Handwritten Character Recognition</h1>
+  <h1 class="heading"><b>Handwritten Character Recognition</b></h1>
   <div class="container" id="container">
 
     <!-- Input container -->
